src/test/testFiles/valid/multiplyByTwo.val
fun multiplyByTwo(x: number): number {
    let z: number = x*2;
    return z;
}
let z = multiplyByTwo(2);