src/test/testFiles/invalid/semanticErrors/undeclaredFunctionCall.val
fun function(x: number, y: number): number {
    let z: number = x + x;
    return z;
}

let z = abc(5);